hphp/test/slow/dv_array/parse-error4.php.expectf

Fatal error: syntax error, unexpected '&', expecting ']' in %s/parse-error4.php on line 5
